@@ -1,6 +1,10 @@
 
 Drupal 7.42, xxxx-xx-xx (development version)
 -----------------------
+- Fixed fatal errors on node preview when a field is displayed in the node
+  teaser but hidden in the full node view. The fix removes a
+  field_attach_prepare_view() call from the node_preview() function since it is
+  redundant with one in the node preview theme layer.
 - Improved the description of the "Trimmed" format option on text fields
   (translatable string change, and minor UI and data structure change).
 
